--- a/_config.yml
+++ b/_config.yml
@@ -65,6 +65,12 @@ tag_map:
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
 
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
+
 # Pagination
 ## Set per_page to 0 to disable pagination
 per_page: 10
