--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "hexo": "^3.8.0",
     "hexo-asset-image": "0.0.3",
     "hexo-deployer-git": "^0.3.1",
+    "hexo-fs": "^1.0.0",
     "hexo-generator-archive": "^0.1.5",
+    "hexo-generator-baidu-sitemap": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.1",
+    "hexo-generator-searchdb": "^1.0.8",
+    "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-i18n": "^0.2.1",
+    "hexo-pagination": "^0.1.0",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.1"
+    "hexo-server": "^0.3.1",
+    "hexo-util": "^0.6.3"
   }
 }
